...
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@color/gray_light"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_outlined"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/text_dimmed"
        android:text="@string/empty_message"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/movie_item"
        android:padding="@dimen/big_padding"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintBottom_toBottomOf="parent"
...
